--- a/Natours/index.html
+++ b/Natours/index.html
@@ -214,6 +214,27 @@
                 <a href="" class="btn btn--green">Discover all tours</a>
             </div>
         </section>
+        <section class="section-stories">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy
+                </h2>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-8.jpg" alt="Person on a tour" class="story__image">
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo perspiciatis commodi veniam
+                        soluta obcaecati cumque recusandae. Ullam distinctio aliquam? Sunt aliquid debitis culpa
+                        impedit.istinctio aliquam? Sunt aliquid debitis culpa impeditistinctio aliquam? Sunt aliquid
+                        debitis culpa impedit</p>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- <section class="grid-test">
         <div class="row">
