Section 5: Building the Stories Section - Part 2

--- a/Natours/index.html
+++ b/Natours/index.html
@@ -224,6 +224,9 @@
                 <div class="story">
                     <figure class="story__shape">
                         <img src="img/nat-8.jpg" alt="Person on a tour" class="story__image">
+                        <figcaption class="story__caption">
+                            Mary Smith
+                        </figcaption>
                     </figure>
                     <div class="story__text">
                         <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
@@ -233,6 +236,26 @@
                         impedit.istinctio aliquam? Sunt aliquid debitis culpa impeditistinctio aliquam? Sunt aliquid
                         debitis culpa impedit</p>
                 </div>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-9.jpg" alt="Person on a tour" class="story__image">
+                        <figcaption class="story__caption">
+                            Jack Wilson
+                        </figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">Wow! My life is completely different now</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo perspiciatis commodi veniam
+                        soluta obcaecati cumque recusandae. Ullam distinctio aliquam? Sunt aliquid debitis culpa
+                        impedit.istinctio aliquam? Sunt aliquid debitis culpa impeditistinctio aliquam? Sunt aliquid
+                        debitis culpa impedit</p>
+                </div>
+            </div>
+            <div class="u-center-text u-margin-top-huge">
+                <a href="" class="btn-text">Read all stories &rarr;</a>
             </div>
         </section>
     </main>
