--- a/Natours/index.html
+++ b/Natours/index.html
@@ -348,6 +348,33 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                <p class="popup__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna
+                    aliqua. Fermentum leo vel orci porta non pulvinar neque. Sit amet justo donec enim. Tempor commodo
+                    ullamcorper a lacus
+                    vestibulum sed arcu non. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare
+                    massa. Pharetra
+                    massa massa ultricies mi quis hendrerit Lorem magna eget arcu non sodales neque. Volutpat
+                    sed cras ornare
+                    arcu. In egestas erat imperdiet sed euismod. Enim nunc faucibus a pellentesque sit amet porttitor.
+                    Scelerisque fermentum
+                    dui faucibus in. Nullam vehicula ipsum a arcu cursus. Tristique sollicitudin nibh sit amet commodo
+                    nulla facilisi nullam
+                    vehicula. Viverra nam libero justo laoreet sit amet.</p>
+                    <a href="#" class="btn btn--green">Book now</a>
+            </div>
+        </div>
+    </div>
     <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
