--- a/Trillo/index.html
+++ b/Trillo/index.html
@@ -11,6 +11,18 @@
         <title>Trillo &mdash; Your all-in-one booking app</title>
     </head>
     <body>
-        Trillo
+        <div class="container">
+            <div class="header">
+                Header Part
+            </div>
+            <div class="content">
+                <nav class="sidebar">
+                    Sidebar
+                </nav>
+                <div class="hotel-view">
+                    Hotel view
+                </div>
+            </div>
+        </div>
     </body>
 </html>
