--- a/Trillo/index.html
+++ b/Trillo/index.html
@@ -46,36 +46,36 @@
         <div class="content">
             <nav class="sidebar">
                 <ul class="side-nav">
-                    <li class="side-nav__item>
+                    <li class="side-nav__item side-nav__item--active">
                         <a href="#" class="side-nav__link">
-                        <svg class="side-nav__icon">
-                            <use xlink:href="img/sprite.svg#icon-home"></use>
-                        </svg>
-                        <span>Hotel</span>
+                            <svg class="side-nav__icon">
+                                <use xlink:href="img/sprite.svg#icon-home"></use>
+                            </svg>
+                            <span>Hotel</span>
                         </a>
                     </li>
-                    <li class="side-nav__item>
+                    <li class="side-nav__item">
                         <a href="#" class="side-nav__link">
-                        <svg class="side-nav__icon">
-                            <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
-                        </svg>
-                        <span>Flight</span>
+                            <svg class="side-nav__icon">
+                                <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
+                            </svg>
+                            <span>Flight</span>
                         </a>
                     </li>
-                    <li class="side-nav__item>
+                    <li class="side-nav__item">
                         <a href="#" class="side-nav__link">
-                        <svg class="side-nav__icon">
-                            <use xlink:href="img/sprite.svg#icon-key"></use>
-                        </svg>
-                        <span>Car rental</span>
+                            <svg class="side-nav__icon">
+                                <use xlink:href="img/sprite.svg#icon-key"></use>
+                            </svg>
+                            <span>Car rental</span>
                         </a>
                     </li>
-                    <li class="side-nav__item>
+                    <li class="side-nav__item">
                         <a href="#" class="side-nav__link">
-                        <svg class="side-nav__icon">
-                            <use xlink:href="img/sprite.svg#icon-map"></use>
-                        </svg>
-                        <span>Tours</span>
+                            <svg class="side-nav__icon">
+                                <use xlink:href="img/sprite.svg#icon-map"></use>
+                            </svg>
+                            <span>Tours</span>
                         </a>
                     </li>
                 </ul>
