Section 7: Building the Description Section - Part 2

--- a/Trillo/index.html
+++ b/Trillo/index.html
@@ -131,7 +131,7 @@
                 <div class="detail">
                     <div class="description">
                         <p class="paragraph">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum consequatur officia esse corrupti molestiae optio accusamus mollitia.
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum consequatur officia esse corrupti ipsum dolor sit, amet consectetur adipisicing elit molestiae optio accusamus mollitia.
                         </p>
                         <p class="paragraph">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae optio
